--- a/Social_App/Base.lproj/Main.storyboard
+++ b/Social_App/Base.lproj/Main.storyboard
@@ -282,7 +282,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DLa-zE-iuq">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DLa-zE-iuq">
                                 <rect key="frame" x="20" y="177" width="560" height="374"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="0.0" id="qYZ-bu-aEN">
@@ -293,7 +293,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="Y5V-pT-hS2" customClass="CollectionViewCell" customModule="InstaClone" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                        <rect key="frame" x="0.0" y="64" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
@@ -318,14 +318,14 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iV3-QT-NbS">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iV3-QT-NbS">
                                 <rect key="frame" x="20" y="57" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="pkP-HM-Laa"/>
                                     <constraint firstAttribute="width" constant="40" id="x31-PD-E9N"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xTO-6a-Rhy">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xTO-6a-Rhy">
                                 <rect key="frame" x="79" y="57" width="501" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="qY7-0c-7F8"/>
@@ -356,7 +356,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MKH-E6-i1p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5352" y="1220"/>
+            <point key="canvasLocation" x="6337" y="845"/>
         </scene>
         <!--Add Image-->
         <scene sceneID="INK-TH-iwM">
@@ -450,7 +450,7 @@
             </objects>
             <point key="canvasLocation" x="3671" y="487"/>
         </scene>
-        <!--Search-->
+        <!--SearchVC-->
         <scene sceneID="Q1w-WJ-k2K">
             <objects>
                 <viewController id="eCb-hn-KTL" customClass="SearchVC" customModule="InstaClone" customModuleProvider="target" sceneMemberID="viewController">
@@ -462,14 +462,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="2SW-Ek-weD">
+                            <searchBar contentMode="redraw" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2SW-Ek-weD">
                                 <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="Jqn-nJ-h9h"/>
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="87" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lVq-18-i3V">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="87" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lVq-18-i3V">
                                 <rect key="frame" x="0.0" y="72" width="600" height="479"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -526,7 +526,7 @@
                             <constraint firstItem="31N-HO-TpC" firstAttribute="top" secondItem="lVq-18-i3V" secondAttribute="bottom" id="caJ-sF-n6u"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Search" image="Search" id="tte-RQ-X9e"/>
+                    <navigationItem key="navigationItem" id="TgF-5Q-Xfi"/>
                     <connections>
                         <outlet property="SearchTableView" destination="lVq-18-i3V" id="c3Y-Vi-5fj"/>
                         <outlet property="searchbar" destination="2SW-Ek-weD" id="420-O7-leh"/>
@@ -534,7 +534,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2vc-zN-pa3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4484" y="1220"/>
+            <point key="canvasLocation" x="5352" y="1220"/>
         </scene>
         <!--Profile-->
         <scene sceneID="PaB-bB-A5K">
@@ -728,7 +728,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="HQI-fi-ID3" kind="relationship" relationship="viewControllers" id="xQC-ce-jFo"/>
-                        <segue destination="eCb-hn-KTL" kind="relationship" relationship="viewControllers" id="Zvs-Ad-NUw"/>
+                        <segue destination="Llx-oL-vaR" kind="relationship" relationship="viewControllers" id="Zvs-Ad-NUw"/>
                         <segue destination="cHE-5e-1V3" kind="relationship" relationship="viewControllers" id="gdB-oI-Tjn"/>
                         <segue destination="XeW-2Q-Erl" kind="relationship" relationship="viewControllers" id="Bem-Pp-y1Q"/>
                     </connections>
@@ -736,6 +736,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LDz-bX-vJe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2298" y="812"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="GTK-8c-QVt">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Llx-oL-vaR" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Search" image="Search" id="tte-RQ-X9e"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2Eg-LB-jJc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="eCb-hn-KTL" kind="relationship" relationship="rootViewController" id="Sgj-UA-WiZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A30-HI-J7O" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4484" y="1220"/>
         </scene>
     </scenes>
     <resources>
